Styling and minor fixes

--- a/frontend/src/app/components/buscador/buscador.component.html
+++ b/frontend/src/app/components/buscador/buscador.component.html
@@ -1,6 +1,6 @@
 <div>
     <input autofocus (keyup.enter)="onNewSearch()" type="text" placeholder="Ingrese algún término clínico"
-        [(ngModel)]="enteredValue">
+        [(ngModel)]="searchInput">
 
     <button (click)="onNewSearch()" type='button'>
         Search
