--- a/frontend/src/app/components/resultados/resultados.component.html
+++ b/frontend/src/app/components/resultados/resultados.component.html
@@ -1,38 +1,49 @@
 <!--  <p>{{ resultados.data.query_padres_termino_preferido[0].termino_preferido | json}}</p> -->
 
 
-<div class="padres" *ngIf="resultados && resultados.data.query_padres_termino_preferido.length != 0">
-    <ul>
-        <h2>
-            Padres
-        </h2>
+<div class="container" *ngIf="resultados.data.query_termino_preferido; else notFound">
+    <div class="padres">
+        <ul>
+            <h2>
+                Padres ({{ resultados.data.query_padres_termino_preferido.length }})
+            </h2>
 
-        <li *ngFor="let padre of resultados.data.query_padres_termino_preferido" href="">
-            <a href="http://localhost:4200/results/{{padre.termino_preferido}}">{{ padre.termino_preferido }}</a>
-        </li>
-    </ul>
+            <li *ngFor="let padre of resultados.data.query_padres_termino_preferido" href="">
+                <a class="links"
+                    href="http://localhost:4200/results/{{padre.termino_preferido}}">{{ padre.termino_preferido }}</a>
+            </li>
+        </ul>
+    </div>
+
+    <div class="termino">
+        <ul>
+            <h2>
+                Término
+            </h2>
+
+            <li *ngFor="let termino of resultados.data.query_termino_preferido">
+                <a class="links"
+                    href="http://localhost:4200/results/{{termino.termino_preferido}}">{{ termino.termino_preferido }}</a>
+                <p>ID: {{ termino.concept_id_HIBA }}</p>
+            </li>
+
+        </ul>
+    </div>
+
+    <div class="hijos">
+        <ul>
+            <h2>
+                Hijos ({{ resultados.data.query_hijos_termino_preferido.length }})
+            </h2>
+
+            <li *ngFor="let hijo of resultados.data.query_hijos_termino_preferido">
+                <a class="links"
+                    href="http://localhost:4200/results/{{hijo.termino_preferido}}">{{ hijo.termino_preferido }}</a>
+            </li>
+        </ul>
+    </div>
 </div>
 
-<div class="termino" *ngIf="resultados && resultados.data.query_termino_preferido.length != 0">
-    <ul>
-        <h2>
-            Término
-        </h2>
-
-        <li *ngFor="let termino of resultados.data.query_termino_preferido">
-            <a href="http://localhost:4200/results/{{termino.termino_preferido}}">{{ termino.termino_preferido }}</a>
-        </li>
-    </ul>
-</div>
-
-<div class="hijos" *ngIf="resultados && resultados.data.query_hijos_termino_preferido.length != 0">
-    <ul>
-        <h2>
-            Hijos
-        </h2>
-
-        <li *ngFor="let hijo of resultados.data.query_hijos_termino_preferido">
-            <a href="http://localhost:4200/results/{{hijo.termino_preferido}}">{{ hijo.termino_preferido }}</a>
-        </li>
-    </ul>
-</div>
+<ng-template #notFound>
+    <div *ngIf="router.navigateByUrl('/')"></div>
+</ng-template>
