--- a/frontend/src/app/components/resultados/resultados.component.css
+++ b/frontend/src/app/components/resultados/resultados.component.css
@@ -1,27 +1,38 @@
- .padres {
+.padres {
     width:  33%;
-    border: 1px solid rgb(71, 71, 71);
+    border: 4px solid #94d3acbd;
+    border-radius: 4px;
     padding-right: 1rem;
     margin: 1rem;
 }
 
 .termino {
     width: 33%;
-    border: 1px solid rgb(71, 71, 71);
+    border: 4px solid #94d3acbd;
     padding-right: 1rem;
     margin: 1rem;
 }
 
 .hijos {
     width: 33%;
-    border: 1px solid rgb(71, 71, 71);
+    border: 4px solid #94d3acbd;
     padding-right: 1rem;
     margin: 1rem;
 }
 
 .links {
     text-decoration: none;
-    color: rgb(0, 52, 163);
+    color: #003cbd;
+}
+
+h2 {
+    font-weight: bold;
+    color: #4a8862;
+}
+
+p.loading {
+    font-size: 20px;
+    margin: 1rem;
 }
 
 .container {
