--- a/frontend/src/app/components/buscador/buscador.component.css
+++ b/frontend/src/app/components/buscador/buscador.component.css
@@ -3,6 +3,7 @@
     align-items: center;
     margin: 1rem;
     justify-content: center;
+    height: 30%;
 }
 
 input {
@@ -10,16 +11,17 @@ input {
     font-size: 18px;
     border-radius: 5px 0 0 5px;
     text-indent: 10px;
+    height: 3rem;
 }
 
 ::placeholder {
-    font-size: 15px;
+    font-size: 17px;
     margin-left: 10px;
 }
 
 fa-icon {
     margin: 5px;
-    font-size: 1.333em;
+    font-size: 2.55rem;
     color: white;
 }
 
