--- a/frontend/src/app/components/resultados/resultados.component.css
+++ b/frontend/src/app/components/resultados/resultados.component.css
@@ -1,23 +1,33 @@
+.barraOpciones {
+    background-color: #cceed2;
+    height: 4rem;
+}
+
 .padres {
     width:  33%;
-    border: 4px solid #94d3acbd;
-    border-radius: 4px;
+    border: 1.5px solid #94d3acbd;
+    border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
+    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
 }
 
 .termino {
     width: 33%;
-    border: 4px solid #94d3acbd;
+    border: 1.5px solid #94d3acbd;
+    border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
+    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
 }
 
 .hijos {
     width: 33%;
-    border: 4px solid #94d3acbd;
+    border: 1.5px solid #94d3acbd;
+    border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
+    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
 }
 
 .links {
@@ -37,4 +47,9 @@ p.loading {
 
 .container {
     display: flex;
+    margin-top: 0.9em;
+}
+
+ul {
+    list-style-type: none;
 }
