--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -7,3 +7,11 @@ body { margin: 0; background-color: #effcef;}
 * {
     font-family: 'Montserrat' !important;
 }
+
+.mat-checkbox-layout {
+    white-space: normal !important;
+}
+
+.mat-checkbox.mat-accent .mat-checkbox-inner-container {
+    margin: 2px 8px auto 0 !important;
+}
