--- a/frontend/src/app/components/resultados/resultados.component.css
+++ b/frontend/src/app/components/resultados/resultados.component.css
@@ -1,33 +1,40 @@
 .barraOpciones {
     background-color: #cceed2;
-    height: 4rem;
+    height: 3rem;
+}
+
+.botonAgregarCohorte {
+    margin: 5px;
+    margin-left: 91%;
+    color: white;
+    background-color: rgb(0, 165, 0);
 }
 
 .padres {
     width:  33%;
-    border: 1.5px solid #94d3acbd;
+    border: 1px solid #35a560c7;
     border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
-    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
+    box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);
 }
 
 .termino {
     width: 33%;
-    border: 1.5px solid #94d3acbd;
+    border: 1px solid #35a560c7;
     border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
-    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
+    box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);
 }
 
 .hijos {
     width: 33%;
-    border: 1.5px solid #94d3acbd;
+    border: 1px solid #35a560c7;
     border-radius: 7px;
     padding-right: 1rem;
     margin: 1rem;
-    box-shadow: 6px 6px 15px -4px rgba(92, 92, 92, 0.75);
+    box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);
 }
 
 .links {
@@ -47,9 +54,17 @@ p.loading {
 
 .container {
     display: flex;
-    margin-top: 0.9em;
+    margin-top: 0.7em;
 }
 
 ul {
     list-style-type: none;
+}
+
+::ng-deep .mat-progress-bar-fill::after {
+    background-color: rgb(103, 190, 107);
+}
+
+::ng-deep .mat-progress-bar-buffer {
+    background: #E4E8EB;
 }
