Nuevo componente y ruta cohortes

--- a/frontend/src/app/components/resultados/resultados.component.html
+++ b/frontend/src/app/components/resultados/resultados.component.html
@@ -3,7 +3,7 @@
 </ng-template>
 
 <div class="barraOpciones">
-    <button mat-raised-button class="botonAgregarCohorte" (click)="addToChecklist()">Agregar a cohorte</button>
+    <button mat-raised-button class="botonAgregarCohorte" (click)="addToCohorte()">Agregar a cohorte</button>
 </div>
 
 <div class="container" *ngIf="isDataLoaded; else loading">
