--- a/frontend/src/app/components/resultados/resultados.component.css
+++ b/frontend/src/app/components/resultados/resultados.component.css
@@ -6,8 +6,9 @@
 .botonAgregarCohorte {
     margin: 5px;
     margin-left: 91%;
-    color: white;
+    color: rgb(179, 255, 173);
     background-color: rgb(0, 165, 0);
+    font-weight: bold;
 }
 
 .padres {
