Buscador en navbar. Componente NuevaCohorte creado.

--- a/frontend/src/app/components/cohortes/cohortes.component.html
+++ b/frontend/src/app/components/cohortes/cohortes.component.html
@@ -1,4 +1,4 @@
-<div class="barraOpciones">
+<!-- <div class="barraOpciones">
     <div class="botonesCohorte">
         <button mat-raised-button>Agregar cohorte</button>
         <button mat-raised-button>Eliminar cohorte</button>
@@ -6,7 +6,6 @@
     </div>
 </div>
 
-<!-- Margin para el expansion panel de cohorte actual -->
 <div class="marginTopCohorteActual">
 </div>
 
@@ -34,4 +33,4 @@
             </li>
         </ul>
     </mat-expansion-panel>
-</mat-accordion>
+</mat-accordion> -->
