--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
 <mat-toolbar>
     <span (click)="onClickHome()" class="title">Clínica Alemana</span>
+    <app-buscador *ngIf="!isHome()"></app-buscador>
 </mat-toolbar>
