Componente NuevaCohorte avanzado.

--- a/frontend/src/app/components/buscador/buscador.component.html
+++ b/frontend/src/app/components/buscador/buscador.component.html
@@ -1,6 +1,6 @@
 <div class="searchBar">
-    <input matInput autofocus (keyup.enter)="onNewSearch()" size="30" type="text"
-        placeholder="Ingrese un término clínico" [(ngModel)]="searchInput" value=''>
+    <input matInput autofocus (keyup.enter)="onNewSearch()" size="30" placeholder="Ingrese un término clínico"
+        [(ngModel)]="searchInput" value=''>
 
     <button class="searchButton" (click)="onNewSearch()" type='button'>
         <fa-icon [icon]="faSearch"></fa-icon>
