Input nativo de nueva cohorte cambiado por mat-input

--- a/frontend/src/app/components/buscador/buscador.component.html
+++ b/frontend/src/app/components/buscador/buscador.component.html
@@ -1,5 +1,5 @@
 <div class="searchBar">
-    <input matInput autofocus (keyup.enter)="onNewSearch()" size="30" placeholder="Ingrese un término clínico"
+    <input autofocus (keyup.enter)="onNewSearch()" size="30" placeholder="Ingrese un término clínico"
         [(ngModel)]="searchInput" value=''>
 
     <button class="searchButton" (click)="onNewSearch()" type='button'>
