--- a/frontend/src/app/components/nuevacohorte/nuevacohorte.component.css
+++ b/frontend/src/app/components/nuevacohorte/nuevacohorte.component.css
@@ -18,6 +18,17 @@
     font-weight: bold;
 }
 
+.headerCohorte {
+    display: flex;
+}
+
+fa-icon {
+    
+    font-size: 2.5rem;
+    color: rgb(190, 93, 255);
+    cursor: pointer;
+    margin-left: auto;
+}
 
 .container {
     display: flex;
@@ -25,13 +36,12 @@
     justify-content: center;
     margin-left: 33%;
     margin-top: 15px;
-    width: 33%;
+    width: 36%;
     border: 1px solid #35a560c7;
     border-radius: 7px;
     box-shadow: 6px 6px 6px -5px rgba(92, 92, 92, 0.75);
 
 }
-
 
 .cohorte {
     margin-top: 15px;
@@ -42,8 +52,13 @@
     margin-left: 13%
 }
 
+.mat-form-field {
+    width: 420px;
+}
+
 .cuerpoCohorte {
     margin-left: 7%;
+    margin-right: 7%;
 }
 
 h2 {
