--- a/frontend/src/app/components/nuevacohorte/nuevacohorte.component.html
+++ b/frontend/src/app/components/nuevacohorte/nuevacohorte.component.html
@@ -13,13 +13,15 @@
 
         <div class="headerCohorte">
             <h2>Crear nueva cohorte ({{cohorteService.cohorteActual.length}})</h2>
-            <fa-icon [icon]="faCheckCircle"></fa-icon>
+            <fa-icon [icon]="faCheckCircle"
+                (click)="cohorteService.postCohorte(cohorteService.nombreCohorte, cohorteService.cohorteActual)">
+            </fa-icon>
         </div>
 
         <div class="nombreCohorte">
             <mat-form-field appearance="legacy">
                 <mat-label>Nombre de la cohorte *</mat-label>
-                <input matInput>
+                <input matInput [(ngModel)]="cohorteService.nombreCohorte">
                 <mat-hint>*Requerido</mat-hint>
             </mat-form-field>
         </div>
@@ -31,10 +33,8 @@
                     <mat-checkbox class="checkboxTermino"
                         (change)="cohorteService.onChange($event, termino, cohorteService.cohorteActual)"
                         [checked]="cohorteService.isChecked(termino)">
-
                         <a class="links"
                             [routerLink]="['/results/', termino.termino_preferido]">{{ termino.termino_preferido }}</a>
-
                     </mat-checkbox>
                 </li>
             </ul>
